Fix admin login route, fix navbar spacing, remove old dashboard, make discourse editable for admins

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -66,8 +66,7 @@ body {
 }
 
 .navbar {
-  @apply sticky z-40 w-full border-b;
-  top: 48px;
+  @apply sticky top-0 z-40 w-full border-b;
 }
 
 .filter-bar {
